--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.0.1",
     "@ng-bootstrap/ng-bootstrap": "^9.1.2",
     "bootstrap": "^4.5.0",
+    "material-icons": "^0.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
